configs/sidecar.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: ingress
    address:
      socket_address: { address: 0.0.0.0, port_value: 9000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: users-v2
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: users-v2 }
          http_filters:
          - name: envoy.router

  - name: egress
    address:
      socket_address: { address: 0.0.0.0, port_value: 9100 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: egress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: widgets-v1
              domains: ["widgets-v1"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: widgets-v1 }
          http_filters:
          - name: envoy.router

  clusters:
  - name: users-v2
    http2_protocol_options: {}
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: users-v2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: users-v2
                port_value: 8000

  - name: widgets-v1
    http2_protocol_options: {}
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: widgets-v1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: widgets-v1
                port_value: 8000
